--- a/prySosaIEv.csproj
+++ b/prySosaIEv.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="clsArchivo.cs" />
     <Compile Include="clsLogin.cs" />
+    <Compile Include="frmMostrarBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMostrarBase.Designer.cs">
+      <DependentUpon>frmMostrarBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCargarProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMostrarBase.resx">
+      <DependentUpon>frmMostrarBase.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCargarProveedores.resx">
       <DependentUpon>frmCargarProveedores.cs</DependentUpon>
     </EmbeddedResource>
