Agregado de clase Logs, y falta validacion de usuario con registro de Logs

--- a/prySosaIEv.csproj
+++ b/prySosaIEv.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="clsArchivo.cs" />
     <Compile Include="clsLogin.cs" />
+    <Compile Include="clsLogs.cs" />
     <Compile Include="frmMostrarBase.cs">
       <SubType>Form</SubType>
     </Compile>
