Registro de usuarios nuevos

--- a/prySosaIEv.csproj
+++ b/prySosaIEv.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgregarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarUsuario.Designer.cs">
+      <DependentUpon>AgregarUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="clsArchivo.cs" />
     <Compile Include="clsLogin.cs" />
     <Compile Include="clsLogs.cs" />
@@ -93,6 +99,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AgregarUsuario.resx">
+      <DependentUpon>AgregarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMostrarBase.resx">
       <DependentUpon>frmMostrarBase.cs</DependentUpon>
     </EmbeddedResource>
