--- a/prySosaIEv.csproj
+++ b/prySosaIEv.csproj
@@ -97,6 +97,12 @@
     <Compile Include="frmMostrarProveedores.Designer.cs">
       <DependentUpon>frmMostrarProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmReestablecerPass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReestablecerPass.Designer.cs">
+      <DependentUpon>frmReestablecerPass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AgregarUsuario.resx">
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMostrarProveedores.resx">
       <DependentUpon>frmMostrarProveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReestablecerPass.resx">
+      <DependentUpon>frmReestablecerPass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
